--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000F2;
-	background-color: #55E91A;
+	color: #0000F8;
+	background-color: #1E804B;
 }
 
 .html
@@ -13,25 +13,26 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 3304px;
+	min-height: 3303.763515059161px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #u124
 {
-	z-index: 192;
+	z-index: 213;
 	height: 111px;
 	background-color: #000000;
 }
 
 #u124-bw
 {
-	z-index: 192;
+	z-index: 213;
 	position: fixed;
 	left: 0px;
 	right: 0px;
@@ -45,7 +46,7 @@
 
 #u149
 {
-	z-index: 197;
+	z-index: 218;
 	width: 48px;
 	background-color: transparent;
 	position: fixed;
@@ -55,7 +56,7 @@
 
 #u132-4
 {
-	z-index: 193;
+	z-index: 214;
 	width: 274px;
 	min-height: 25px;
 	background-color: transparent;
@@ -71,12 +72,12 @@
 
 #u158-4
 {
-	z-index: 203;
+	z-index: 224;
 	width: 121px;
 	min-height: 16px;
 	background-color: transparent;
-	line-height: 23px;
 	color: #FFFFFF;
+	line-height: 23px;
 	text-align: center;
 	font-size: 19px;
 	font-family: asap, sans-serif;
@@ -88,12 +89,12 @@
 
 #u159-4
 {
-	z-index: 207;
+	z-index: 228;
 	width: 117px;
 	min-height: 16px;
 	background-color: transparent;
-	line-height: 23px;
 	color: #FFFFFF;
+	line-height: 23px;
 	text-align: center;
 	font-size: 19px;
 	font-family: asap, sans-serif;
@@ -105,12 +106,12 @@
 
 #u160-4
 {
-	z-index: 211;
+	z-index: 232;
 	width: 109px;
 	min-height: 16px;
 	background-color: transparent;
-	line-height: 23px;
 	color: #FFFFFF;
+	line-height: 23px;
 	text-align: center;
 	font-size: 19px;
 	font-family: asap, sans-serif;
@@ -122,12 +123,12 @@
 
 #u156-4
 {
-	z-index: 199;
+	z-index: 220;
 	width: 112px;
 	min-height: 27px;
 	background-color: transparent;
-	line-height: 12px;
 	color: #FFFFFF;
+	line-height: 12px;
 	text-align: left;
 	font-size: 10px;
 	font-family: asap, sans-serif;
@@ -139,7 +140,7 @@
 
 #u161
 {
-	z-index: 215;
+	z-index: 236;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -150,7 +151,7 @@
 
 #u162
 {
-	z-index: 216;
+	z-index: 237;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -161,7 +162,7 @@
 
 #u163
 {
-	z-index: 217;
+	z-index: 238;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -172,7 +173,7 @@
 
 #u114
 {
-	z-index: 228;
+	z-index: 249;
 	width: 50px;
 	min-height: 25px;
 	border-style: none;
@@ -185,7 +186,7 @@
 
 #u75
 {
-	z-index: 227;
+	z-index: 248;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
@@ -198,7 +199,7 @@
 
 #u82-4
 {
-	z-index: 177;
+	z-index: 198;
 	width: 248px;
 	min-height: 41px;
 	background-color: transparent;
@@ -214,7 +215,7 @@
 
 #u170
 {
-	z-index: 185;
+	z-index: 206;
 	width: 170px;
 	height: 1px;
 	background-color: #7F7F7F;
@@ -233,7 +234,7 @@
 
 #u237
 {
-	z-index: 146;
+	z-index: 166;
 	width: 200px;
 	min-height: 100px;
 	border-style: none;
@@ -245,7 +246,7 @@
 
 #u168-4
 {
-	z-index: 181;
+	z-index: 202;
 	width: 351px;
 	min-height: 63px;
 	background-color: transparent;
@@ -261,7 +262,7 @@
 
 #u171-4
 {
-	z-index: 186;
+	z-index: 207;
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
@@ -277,7 +278,7 @@
 
 #u172
 {
-	z-index: 190;
+	z-index: 211;
 	width: 39px;
 	background-color: transparent;
 	margin-left: 461px;
@@ -293,7 +294,7 @@
 
 #u81-4
 {
-	z-index: 81;
+	z-index: 101;
 	width: 440px;
 	min-height: 32px;
 	background-color: transparent;
@@ -308,7 +309,7 @@
 
 #pamphletu389
 {
-	z-index: 19;
+	z-index: 23;
 	width: 0.01px;
 	height: 78px;
 	position: fixed;
@@ -318,7 +319,7 @@
 
 #u390
 {
-	z-index: 20;
+	z-index: 24;
 	width: 60px;
 	position: relative;
 	margin-right: -10000px;
@@ -366,12 +367,12 @@
 
 #u396popup
 {
-	z-index: 22;
+	z-index: 26;
 }
 
 #u397
 {
-	z-index: 23;
+	z-index: 27;
 	width: 608px;
 	height: 417px;
 	border-style: none;
@@ -392,7 +393,7 @@
 
 #u407-4
 {
-	z-index: 24;
+	z-index: 28;
 	width: 338px;
 	min-height: 76px;
 	background-color: transparent;
@@ -408,7 +409,7 @@
 
 #u413
 {
-	z-index: 34;
+	z-index: 38;
 	width: 43px;
 	background-color: transparent;
 	position: relative;
@@ -418,7 +419,7 @@
 
 #u419-4
 {
-	z-index: 36;
+	z-index: 40;
 	width: 221px;
 	min-height: 22px;
 	background-color: transparent;
@@ -439,7 +440,7 @@
 
 #u410-4
 {
-	z-index: 29;
+	z-index: 33;
 	width: 141px;
 	min-height: 25px;
 	background-color: transparent;
@@ -451,7 +452,7 @@
 
 #u408
 {
-	z-index: 28;
+	z-index: 32;
 	width: 150px;
 	min-height: 100px;
 	border-style: none;
@@ -464,7 +465,7 @@
 
 #u411
 {
-	z-index: 33;
+	z-index: 37;
 	width: 454px;
 	min-height: 304px;
 	border-style: none;
@@ -507,14 +508,14 @@
 
 #u406-4
 {
-	z-index: 41;
+	z-index: 45;
 	width: 80px;
 	min-height: 32px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 32px;
 	color: #FFFFFF;
+	line-height: 32px;
 	text-align: center;
 	font-size: 23px;
 	font-family: asap, sans-serif;
@@ -532,7 +533,7 @@
 
 #u380
 {
-	z-index: 17;
+	z-index: 21;
 	width: 59px;
 	background-color: transparent;
 	opacity: 0;
@@ -545,7 +546,7 @@
 
 #u178
 {
-	z-index: 89;
+	z-index: 109;
 	width: 120px;
 	background-color: transparent;
 	border-radius: 100px;
@@ -555,7 +556,7 @@
 
 #u167-4
 {
-	z-index: 85;
+	z-index: 105;
 	width: 592px;
 	min-height: 120px;
 	background-color: transparent;
@@ -571,7 +572,7 @@
 
 #u379-4
 {
-	z-index: 13;
+	z-index: 17;
 	width: 59px;
 	min-height: 17px;
 	background-color: transparent;
@@ -604,7 +605,7 @@
 
 #u184-4
 {
-	z-index: 91;
+	z-index: 111;
 	width: 105px;
 	min-height: 22px;
 	background-color: transparent;
@@ -619,7 +620,7 @@
 
 #u192
 {
-	z-index: 95;
+	z-index: 115;
 	width: 500px;
 	border-width: 2px;
 	border-style: solid;
@@ -635,7 +636,7 @@
 
 #u190
 {
-	z-index: 96;
+	z-index: 116;
 	width: 302px;
 	min-height: 29px;
 	border-style: none;
@@ -649,7 +650,7 @@
 
 #buttonu199
 {
-	z-index: 97;
+	z-index: 117;
 	width: 67px;
 	border-width: 1px;
 	border-style: solid;
@@ -673,7 +674,7 @@
 
 #u243-4
 {
-	z-index: 100;
+	z-index: 120;
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
@@ -699,7 +700,7 @@
 
 #u203
 {
-	z-index: 98;
+	z-index: 118;
 	width: 18px;
 	background-color: transparent;
 	position: relative;
@@ -717,7 +718,7 @@
 
 #u241
 {
-	z-index: 147;
+	z-index: 167;
 	vertical-align: top;
 	width: 302px;
 	height: 2px;
@@ -736,7 +737,7 @@
 
 #u216
 {
-	z-index: 218;
+	z-index: 239;
 	width: 367px;
 	min-height: 69px;
 	border-style: none;
@@ -750,7 +751,7 @@
 
 #u220-4
 {
-	z-index: 219;
+	z-index: 240;
 	width: 351px;
 	min-height: 20px;
 	background-color: transparent;
@@ -765,7 +766,7 @@
 
 #u221-4
 {
-	z-index: 223;
+	z-index: 244;
 	width: 424px;
 	min-height: 20px;
 	background-color: transparent;
@@ -781,7 +782,7 @@
 
 #u353
 {
-	z-index: 175;
+	z-index: 195;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
@@ -801,7 +802,7 @@
 
 #buttonu212
 {
-	z-index: 104;
+	z-index: 124;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -819,7 +820,7 @@
 
 #pamphletu291
 {
-	z-index: 105;
+	z-index: 125;
 	width: 0.01px;
 	height: 46px;
 	padding-bottom: 10px;
@@ -831,7 +832,7 @@
 
 #u292
 {
-	z-index: 106;
+	z-index: 126;
 	width: 187px;
 	position: relative;
 	margin-right: -10000px;
@@ -858,7 +859,7 @@
 
 #u206
 {
-	z-index: 112;
+	z-index: 132;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -882,7 +883,7 @@
 
 #u215-4
 {
-	z-index: 108;
+	z-index: 128;
 	width: 160px;
 	min-height: 6px;
 	background-color: transparent;
@@ -931,12 +932,12 @@
 
 #u298popup
 {
-	z-index: 114;
+	z-index: 134;
 }
 
 #u303
 {
-	z-index: 115;
+	z-index: 135;
 	width: 304px;
 	height: 245px;
 	border-style: none;
@@ -951,7 +952,7 @@
 
 #u328-4
 {
-	z-index: 130;
+	z-index: 150;
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
@@ -965,7 +966,7 @@
 
 #u325
 {
-	z-index: 128;
+	z-index: 148;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -975,7 +976,7 @@
 
 #u324-4
 {
-	z-index: 124;
+	z-index: 144;
 	width: 304px;
 	min-height: 30px;
 	background-color: transparent;
@@ -990,7 +991,7 @@
 
 #u321-6
 {
-	z-index: 117;
+	z-index: 137;
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
@@ -1004,7 +1005,7 @@
 
 #u322
 {
-	z-index: 123;
+	z-index: 143;
 	width: 200px;
 	min-height: 6px;
 	border-style: none;
@@ -1017,7 +1018,7 @@
 
 #u319
 {
-	z-index: 116;
+	z-index: 136;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -1051,15 +1052,15 @@
 
 #u308-4
 {
-	z-index: 135;
+	z-index: 155;
 	width: 91px;
 	min-height: 20px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	color: #000000;
-	text-align: center;
 	line-height: 20px;
+	text-align: center;
 	font-family: brandon-grotesque, sans-serif;
 	font-weight: 500;
 	position: relative;
@@ -1070,7 +1071,7 @@
 
 #buttonu228
 {
-	z-index: 139;
+	z-index: 159;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -1097,7 +1098,7 @@
 
 #u230
 {
-	z-index: 144;
+	z-index: 164;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -1122,7 +1123,7 @@
 
 #u229-4
 {
-	z-index: 140;
+	z-index: 160;
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
@@ -1157,7 +1158,7 @@
 
 #pamphletu329
 {
-	z-index: 148;
+	z-index: 168;
 	width: 0.01px;
 	height: 53px;
 	position: relative;
@@ -1168,7 +1169,7 @@
 
 #u334
 {
-	z-index: 149;
+	z-index: 169;
 	width: 175px;
 	position: relative;
 	margin-right: -10000px;
@@ -1224,12 +1225,12 @@
 
 #u336popup
 {
-	z-index: 151;
+	z-index: 171;
 }
 
 #u337
 {
-	z-index: 152;
+	z-index: 172;
 	width: 304px;
 	height: 245px;
 	border-style: none;
@@ -1250,7 +1251,7 @@
 
 #u338-4
 {
-	z-index: 164;
+	z-index: 184;
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
@@ -1262,7 +1263,7 @@
 
 #u345
 {
-	z-index: 162;
+	z-index: 182;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -1272,20 +1273,20 @@
 
 #u342-4
 {
-	z-index: 158;
+	z-index: 178;
 	width: 304px;
 	min-height: 30px;
 	background-color: transparent;
-	line-height: 23px;
 	text-align: center;
 	font-size: 19px;
+	line-height: 23px;
 	margin-top: 18px;
 	position: relative;
 }
 
 #u339-4
 {
-	z-index: 154;
+	z-index: 174;
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
@@ -1297,7 +1298,7 @@
 
 #u350
 {
-	z-index: 168;
+	z-index: 188;
 	width: 151px;
 	min-height: 17px;
 	border-style: none;
@@ -1310,7 +1311,7 @@
 
 #u352
 {
-	z-index: 169;
+	z-index: 189;
 	vertical-align: top;
 	width: 156px;
 	height: 2px;
@@ -1329,7 +1330,7 @@
 
 #u343
 {
-	z-index: 153;
+	z-index: 173;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -1371,15 +1372,15 @@
 
 #u348-4
 {
-	z-index: 171;
+	z-index: 191;
 	width: 91px;
 	min-height: 20px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	color: #000000;
-	text-align: center;
 	line-height: 20px;
+	text-align: center;
 	font-family: brandon-grotesque, sans-serif;
 	font-weight: 500;
 	position: relative;
@@ -1390,7 +1391,7 @@
 
 #u185
 {
-	z-index: 80;
+	z-index: 100;
 	width: 250px;
 	min-height: 336px;
 	border-style: none;
@@ -1410,7 +1411,7 @@
 
 #u244-4
 {
-	z-index: 45;
+	z-index: 65;
 	width: 898px;
 	min-height: 32px;
 	background-color: transparent;
@@ -1432,7 +1433,7 @@
 
 #u245
 {
-	z-index: 54;
+	z-index: 74;
 	width: 120px;
 	background-color: transparent;
 	border-radius: 100px;
@@ -1442,7 +1443,7 @@
 
 #u248-5
 {
-	z-index: 49;
+	z-index: 69;
 	width: 592px;
 	min-height: 139px;
 	background-color: transparent;
@@ -1461,13 +1462,6 @@
 	margin-top: 18px;
 }
 
-#pu410-4,#ppu184-4,#ppu356
-{
-	width: 0.01px;
-	padding-bottom: 0px;
-	margin-right: -10000px;
-}
-
 #page_position_content,#pu184-4,#pu356
 {
 	width: 0.01px;
@@ -1475,7 +1469,7 @@
 
 #u356
 {
-	z-index: 61;
+	z-index: 81;
 	width: 500px;
 	border-width: 2px;
 	border-style: solid;
@@ -1497,7 +1491,7 @@
 
 #u357
 {
-	z-index: 62;
+	z-index: 82;
 	width: 302px;
 	min-height: 29px;
 	border-style: none;
@@ -1509,7 +1503,7 @@
 
 #u364
 {
-	z-index: 71;
+	z-index: 91;
 	width: 367px;
 	min-height: 69px;
 	border-style: none;
@@ -1521,7 +1515,7 @@
 
 #buttonu359
 {
-	z-index: 63;
+	z-index: 83;
 	width: 67px;
 	border-width: 1px;
 	border-style: solid;
@@ -1553,7 +1547,7 @@
 
 #u362-4
 {
-	z-index: 66;
+	z-index: 86;
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
@@ -1588,7 +1582,7 @@
 
 #u360
 {
-	z-index: 64;
+	z-index: 84;
 	width: 18px;
 	background-color: transparent;
 	position: relative;
@@ -1613,7 +1607,7 @@
 
 #u363
 {
-	z-index: 70;
+	z-index: 90;
 	vertical-align: top;
 	width: 302px;
 	height: 2px;
@@ -1632,7 +1626,7 @@
 
 #u366-4
 {
-	z-index: 72;
+	z-index: 92;
 	width: 351px;
 	min-height: 20px;
 	background-color: transparent;
@@ -1647,7 +1641,7 @@
 
 #u367-4
 {
-	z-index: 76;
+	z-index: 96;
 	width: 416px;
 	min-height: 20px;
 	background-color: transparent;
@@ -1663,7 +1657,7 @@
 
 #u355-4
 {
-	z-index: 57;
+	z-index: 77;
 	width: 105px;
 	min-height: 22px;
 	background-color: transparent;
@@ -1677,7 +1671,7 @@
 
 #u369
 {
-	z-index: 176;
+	z-index: 196;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
@@ -1690,7 +1684,7 @@
 
 #u256
 {
-	z-index: 56;
+	z-index: 76;
 	width: 250px;
 	min-height: 336px;
 	border-style: none;
@@ -1710,7 +1704,7 @@
 
 #u255-4
 {
-	z-index: 2;
+	z-index: 6;
 	width: 440px;
 	min-height: 32px;
 	background-color: transparent;
@@ -1732,7 +1726,7 @@
 
 #u251
 {
-	z-index: 10;
+	z-index: 14;
 	width: 120px;
 	background-color: transparent;
 	border-radius: 100px;
@@ -1747,7 +1741,7 @@
 
 #u254-4
 {
-	z-index: 6;
+	z-index: 10;
 	width: 592px;
 	min-height: 120px;
 	background-color: transparent;
@@ -1759,17 +1753,150 @@
 	left: 142px;
 }
 
+#u431-4
+{
+	z-index: 57;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	margin-left: 101px;
+	margin-top: 21px;
+	position: relative;
+}
+
+#u429
+{
+	z-index: 3;
+	width: 505px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-left: 101px;
+	top: -2px;
+	margin-bottom: -2px;
+	position: relative;
+}
+
+#ppu426-4
+{
+	width: 0.01px;
+	margin-left: 101px;
+	margin-top: 11px;
+}
+
+#pu410-4,#ppu184-4,#ppu356,#pu426-4
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-right: -10000px;
+}
+
+#u426-4
+{
+	z-index: 61;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+}
+
+#u420
+{
+	z-index: 2;
+	width: 505px;
+	min-height: 17px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	top: -1px;
+	margin-bottom: -1px;
+	position: relative;
+}
+
+#u427-4
+{
+	z-index: 53;
+	width: 105px;
+	min-height: 22px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	margin-left: 1px;
+	margin-top: 16px;
+	position: relative;
+}
+
+#u422
+{
+	z-index: 4;
+	width: 504px;
+	min-height: 20px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	top: -1px;
+	margin-bottom: -1px;
+	position: relative;
+}
+
+#u428-4
+{
+	z-index: 49;
+	width: 73px;
+	min-height: 23px;
+	background-color: transparent;
+	text-align: left;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	margin-top: 10px;
+	position: relative;
+}
+
+#u424
+{
+	z-index: 5;
+	width: 504px;
+	min-height: 20px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	top: -1px;
+	margin-bottom: -1px;
+	position: relative;
+}
+
+#u432
+{
+	z-index: 197;
+	width: 504px;
+	min-height: 81px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-top: 13px;
+	position: relative;
+}
+
 #u258
 {
-	z-index: 12;
+	z-index: 16;
 	width: 250px;
 	min-height: 336px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 690px;
-	margin-top: 53px;
 	position: relative;
+	margin-right: -10000px;
+	margin-top: 11px;
+	left: 533px;
 }
 
 body
