--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000F8;
-	background-color: #1E804B;
+	color: #0000E8;
+	background-color: #5F64F4;
 }
 
 .html
@@ -25,14 +25,14 @@
 
 #u124
 {
-	z-index: 213;
+	z-index: 215;
 	height: 111px;
 	background-color: #000000;
 }
 
 #u124-bw
 {
-	z-index: 213;
+	z-index: 215;
 	position: fixed;
 	left: 0px;
 	right: 0px;
@@ -46,7 +46,7 @@
 
 #u149
 {
-	z-index: 218;
+	z-index: 220;
 	width: 48px;
 	background-color: transparent;
 	position: fixed;
@@ -56,7 +56,7 @@
 
 #u132-4
 {
-	z-index: 214;
+	z-index: 216;
 	width: 274px;
 	min-height: 25px;
 	background-color: transparent;
@@ -72,7 +72,7 @@
 
 #u158-4
 {
-	z-index: 224;
+	z-index: 226;
 	width: 121px;
 	min-height: 16px;
 	background-color: transparent;
@@ -89,7 +89,7 @@
 
 #u159-4
 {
-	z-index: 228;
+	z-index: 230;
 	width: 117px;
 	min-height: 16px;
 	background-color: transparent;
@@ -106,7 +106,7 @@
 
 #u160-4
 {
-	z-index: 232;
+	z-index: 234;
 	width: 109px;
 	min-height: 16px;
 	background-color: transparent;
@@ -123,7 +123,7 @@
 
 #u156-4
 {
-	z-index: 220;
+	z-index: 222;
 	width: 112px;
 	min-height: 27px;
 	background-color: transparent;
@@ -140,7 +140,7 @@
 
 #u161
 {
-	z-index: 236;
+	z-index: 238;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -151,7 +151,7 @@
 
 #u162
 {
-	z-index: 237;
+	z-index: 239;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -162,7 +162,7 @@
 
 #u163
 {
-	z-index: 238;
+	z-index: 240;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -173,7 +173,7 @@
 
 #u114
 {
-	z-index: 249;
+	z-index: 251;
 	width: 50px;
 	min-height: 25px;
 	border-style: none;
@@ -186,7 +186,7 @@
 
 #u75
 {
-	z-index: 248;
+	z-index: 250;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
@@ -199,7 +199,7 @@
 
 #u82-4
 {
-	z-index: 198;
+	z-index: 200;
 	width: 248px;
 	min-height: 41px;
 	background-color: transparent;
@@ -215,7 +215,7 @@
 
 #u170
 {
-	z-index: 206;
+	z-index: 208;
 	width: 170px;
 	height: 1px;
 	background-color: #7F7F7F;
@@ -234,7 +234,7 @@
 
 #u237
 {
-	z-index: 166;
+	z-index: 168;
 	width: 200px;
 	min-height: 100px;
 	border-style: none;
@@ -246,7 +246,7 @@
 
 #u168-4
 {
-	z-index: 202;
+	z-index: 204;
 	width: 351px;
 	min-height: 63px;
 	background-color: transparent;
@@ -262,7 +262,7 @@
 
 #u171-4
 {
-	z-index: 207;
+	z-index: 209;
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
@@ -278,7 +278,7 @@
 
 #u172
 {
-	z-index: 211;
+	z-index: 213;
 	width: 39px;
 	background-color: transparent;
 	margin-left: 461px;
@@ -294,7 +294,7 @@
 
 #u81-4
 {
-	z-index: 101;
+	z-index: 103;
 	width: 440px;
 	min-height: 32px;
 	background-color: transparent;
@@ -546,7 +546,7 @@
 
 #u178
 {
-	z-index: 109;
+	z-index: 111;
 	width: 120px;
 	background-color: transparent;
 	border-radius: 100px;
@@ -556,7 +556,7 @@
 
 #u167-4
 {
-	z-index: 105;
+	z-index: 107;
 	width: 592px;
 	min-height: 120px;
 	background-color: transparent;
@@ -605,7 +605,7 @@
 
 #u184-4
 {
-	z-index: 111;
+	z-index: 113;
 	width: 105px;
 	min-height: 22px;
 	background-color: transparent;
@@ -620,7 +620,7 @@
 
 #u192
 {
-	z-index: 115;
+	z-index: 117;
 	width: 500px;
 	border-width: 2px;
 	border-style: solid;
@@ -636,7 +636,7 @@
 
 #u190
 {
-	z-index: 116;
+	z-index: 118;
 	width: 302px;
 	min-height: 29px;
 	border-style: none;
@@ -650,7 +650,7 @@
 
 #buttonu199
 {
-	z-index: 117;
+	z-index: 119;
 	width: 67px;
 	border-width: 1px;
 	border-style: solid;
@@ -672,9 +672,17 @@
 	margin: 75px -10000px 0px 0px;
 }
 
+#buttonu199.ButtonSelected
+{
+	background-color: #FFFFFF;
+	width: 67px;
+	min-height: 0px;
+	margin: 75px -10000px 0px 0px;
+}
+
 #u243-4
 {
-	z-index: 120;
+	z-index: 122;
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
@@ -700,7 +708,7 @@
 
 #u203
 {
-	z-index: 118;
+	z-index: 120;
 	width: 18px;
 	background-color: transparent;
 	position: relative;
@@ -718,7 +726,7 @@
 
 #u241
 {
-	z-index: 167;
+	z-index: 169;
 	vertical-align: top;
 	width: 302px;
 	height: 2px;
@@ -737,7 +745,7 @@
 
 #u216
 {
-	z-index: 239;
+	z-index: 241;
 	width: 367px;
 	min-height: 69px;
 	border-style: none;
@@ -751,7 +759,7 @@
 
 #u220-4
 {
-	z-index: 240;
+	z-index: 242;
 	width: 351px;
 	min-height: 20px;
 	background-color: transparent;
@@ -766,7 +774,7 @@
 
 #u221-4
 {
-	z-index: 244;
+	z-index: 246;
 	width: 424px;
 	min-height: 20px;
 	background-color: transparent;
@@ -782,7 +790,7 @@
 
 #u353
 {
-	z-index: 195;
+	z-index: 197;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
@@ -802,7 +810,7 @@
 
 #buttonu212
 {
-	z-index: 124;
+	z-index: 126;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -820,7 +828,7 @@
 
 #pamphletu291
 {
-	z-index: 125;
+	z-index: 127;
 	width: 0.01px;
 	height: 46px;
 	padding-bottom: 10px;
@@ -832,7 +840,7 @@
 
 #u292
 {
-	z-index: 126;
+	z-index: 128;
 	width: 187px;
 	position: relative;
 	margin-right: -10000px;
@@ -859,7 +867,7 @@
 
 #u206
 {
-	z-index: 132;
+	z-index: 134;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -883,7 +891,7 @@
 
 #u215-4
 {
-	z-index: 128;
+	z-index: 130;
 	width: 160px;
 	min-height: 6px;
 	background-color: transparent;
@@ -932,12 +940,12 @@
 
 #u298popup
 {
-	z-index: 134;
+	z-index: 136;
 }
 
 #u303
 {
-	z-index: 135;
+	z-index: 137;
 	width: 304px;
 	height: 245px;
 	border-style: none;
@@ -952,7 +960,7 @@
 
 #u328-4
 {
-	z-index: 150;
+	z-index: 152;
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
@@ -966,7 +974,7 @@
 
 #u325
 {
-	z-index: 148;
+	z-index: 150;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -976,7 +984,7 @@
 
 #u324-4
 {
-	z-index: 144;
+	z-index: 146;
 	width: 304px;
 	min-height: 30px;
 	background-color: transparent;
@@ -991,7 +999,7 @@
 
 #u321-6
 {
-	z-index: 137;
+	z-index: 139;
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
@@ -1005,7 +1013,7 @@
 
 #u322
 {
-	z-index: 143;
+	z-index: 145;
 	width: 200px;
 	min-height: 6px;
 	border-style: none;
@@ -1018,7 +1026,7 @@
 
 #u319
 {
-	z-index: 136;
+	z-index: 138;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -1052,7 +1060,7 @@
 
 #u308-4
 {
-	z-index: 155;
+	z-index: 157;
 	width: 91px;
 	min-height: 20px;
 	border-style: none;
@@ -1071,7 +1079,7 @@
 
 #buttonu228
 {
-	z-index: 159;
+	z-index: 161;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -1098,7 +1106,7 @@
 
 #u230
 {
-	z-index: 164;
+	z-index: 166;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -1123,7 +1131,7 @@
 
 #u229-4
 {
-	z-index: 160;
+	z-index: 162;
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
@@ -1158,7 +1166,7 @@
 
 #pamphletu329
 {
-	z-index: 168;
+	z-index: 170;
 	width: 0.01px;
 	height: 53px;
 	position: relative;
@@ -1169,7 +1177,7 @@
 
 #u334
 {
-	z-index: 169;
+	z-index: 171;
 	width: 175px;
 	position: relative;
 	margin-right: -10000px;
@@ -1225,12 +1233,12 @@
 
 #u336popup
 {
-	z-index: 171;
+	z-index: 173;
 }
 
 #u337
 {
-	z-index: 172;
+	z-index: 174;
 	width: 304px;
 	height: 245px;
 	border-style: none;
@@ -1251,7 +1259,7 @@
 
 #u338-4
 {
-	z-index: 184;
+	z-index: 186;
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
@@ -1263,7 +1271,7 @@
 
 #u345
 {
-	z-index: 182;
+	z-index: 184;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -1273,7 +1281,7 @@
 
 #u342-4
 {
-	z-index: 178;
+	z-index: 180;
 	width: 304px;
 	min-height: 30px;
 	background-color: transparent;
@@ -1286,7 +1294,7 @@
 
 #u339-4
 {
-	z-index: 174;
+	z-index: 176;
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
@@ -1298,7 +1306,7 @@
 
 #u350
 {
-	z-index: 188;
+	z-index: 190;
 	width: 151px;
 	min-height: 17px;
 	border-style: none;
@@ -1311,7 +1319,7 @@
 
 #u352
 {
-	z-index: 189;
+	z-index: 191;
 	vertical-align: top;
 	width: 156px;
 	height: 2px;
@@ -1330,7 +1338,7 @@
 
 #u343
 {
-	z-index: 173;
+	z-index: 175;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -1372,7 +1380,7 @@
 
 #u348-4
 {
-	z-index: 191;
+	z-index: 193;
 	width: 91px;
 	min-height: 20px;
 	border-style: none;
@@ -1391,7 +1399,7 @@
 
 #u185
 {
-	z-index: 100;
+	z-index: 102;
 	width: 250px;
 	min-height: 336px;
 	border-style: none;
@@ -1483,39 +1491,65 @@
 	left: 1px;
 }
 
+#u356_position_content
+{
+	margin-bottom: -22px;
+	padding-top: 7px;
+}
+
 #pu357
 {
 	width: 0.01px;
-	margin: 7px -10000px -36px 13px;
+	margin-left: 14px;
 }
 
 #u357
 {
 	z-index: 82;
-	width: 302px;
+	width: 200px;
 	min-height: 29px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 1px;
 	position: relative;
+	margin-right: -10000px;
+}
+
+#u434
+{
+	z-index: 83;
+	width: 200px;
+	min-height: 29px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 221px;
+}
+
+#pu364
+{
+	width: 0.01px;
+	margin-left: 13px;
+	margin-top: 25px;
 }
 
 #u364
 {
-	z-index: 91;
+	z-index: 93;
 	width: 367px;
 	min-height: 69px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-top: 25px;
 	position: relative;
+	margin-right: -10000px;
 }
 
 #buttonu359
 {
-	z-index: 83;
+	z-index: 84;
 	width: 67px;
 	border-width: 1px;
 	border-style: solid;
@@ -1525,8 +1559,8 @@
 	padding-bottom: 3px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 75px;
-	left: 425px;
+	margin-top: 14px;
+	left: 412px;
 }
 
 #buttonu359:hover
@@ -1534,20 +1568,20 @@
 	background-color: #CACACA;
 	width: 67px;
 	min-height: 0px;
-	margin: 75px -10000px 0px 0px;
+	margin: 14px -10000px 0px 0px;
 }
 
-#buttonu199.ButtonSelected,#buttonu359.ButtonSelected
+#buttonu359.ButtonSelected
 {
 	background-color: #FFFFFF;
 	width: 67px;
 	min-height: 0px;
-	margin: 75px -10000px 0px 0px;
+	margin: 14px -10000px 0px 0px;
 }
 
 #u362-4
 {
-	z-index: 86;
+	z-index: 87;
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
@@ -1582,7 +1616,7 @@
 
 #u360
 {
-	z-index: 84;
+	z-index: 85;
 	width: 18px;
 	background-color: transparent;
 	position: relative;
@@ -1607,9 +1641,9 @@
 
 #u363
 {
-	z-index: 90;
+	z-index: 91;
 	vertical-align: top;
-	width: 302px;
+	width: 202px;
 	height: 2px;
 	position: relative;
 	margin-right: -10000px;
@@ -1621,12 +1655,31 @@
 .hidpi #u363
 {
 	background-image: url("../images/u363_2x.png");
-	background-size: 302px 2px;
+	background-size: 202px 2px;
+}
+
+#u436
+{
+	z-index: 92;
+	vertical-align: top;
+	width: 202px;
+	height: 2px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 29px;
+	left: 237px;
+	background: url("../images/u436.png") no-repeat 0px 0px;
+}
+
+.hidpi #u436
+{
+	background-image: url("../images/u436_2x.png");
+	background-size: 202px 2px;
 }
 
 #u366-4
 {
-	z-index: 92;
+	z-index: 94;
 	width: 351px;
 	min-height: 20px;
 	background-color: transparent;
@@ -1641,7 +1694,7 @@
 
 #u367-4
 {
-	z-index: 96;
+	z-index: 98;
 	width: 416px;
 	min-height: 20px;
 	background-color: transparent;
@@ -1665,13 +1718,12 @@
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	margin-left: 3px;
-	margin-top: 14px;
 	position: relative;
 }
 
 #u369
 {
-	z-index: 196;
+	z-index: 198;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
@@ -1875,7 +1927,7 @@
 
 #u432
 {
-	z-index: 197;
+	z-index: 199;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
